--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="music">
                   <audio loop autoplay controls>Your browser does not support the audio element.</audio>
             </div>
-            <h1>💕 MÃI BÊN EM BẠN NHÉ 💕</h1>
+            <h1>💕 MÃI BÊN NHAU EM NHÉ 💕</h1>
 <p></p>
       </div> 
       
